[package]
name = "harper-py"
version = "0.1.8"
edition = "2024"

[lib]
name = "harper_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
harper-core = { git = "https://github.com/fundamental-ai/harper.git", tag = "v0.1.8" }
harper-comments = { git = "https://github.com/fundamental-ai/harper.git", tag = "v0.1.8" }
serde_json = "1.0"

[build-dependencies]
pyo3-stub-gen = "0.25"

# Add workspace table to make it standalone
[workspace]